<resources>
    <string name="sign_up">Sign up</string>
    <string name="account_ques">Already have account?</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login_btn">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up_not_account_yet">Sign up!</string>
    <string name="username">Full name</string>
    <string name="cofirm_password">Cofirm password</string>
    <string name="resset_password">Resset Password</string>
    <string name="send">Send</string>
    <string name="google_client_id">721298036602-v5013rhhl1pjn8t2rcolqr6486l8kp2c.apps.googleusercontent.com</string>
</resources>