<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    tools:context=".LoginPageFragment">

    <ImageView
        android:id="@+id/discover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/discover"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/emailaddress_sign"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/discover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:paddingLeft="20dp"
        android:drawableStart="@drawable/emailicon"
        android:drawablePadding="20dp"
        android:background="@drawable/edttxt_design"
        android:hint="@string/e_mail_address"
        android:textSize="14dp"
        android:textColorHint="@color/secondtextColor"
        android:inputType="textEmailAddress"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/password_sign_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/emailaddress_sign"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <EditText
        android:id="@+id/password_sign"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:paddingLeft="20dp"
        android:drawableStart="@drawable/passwordicon"
        android:drawablePadding="20dp"
        android:background="@drawable/edttxt_design"
        android:hint="@string/password"
        android:textSize="14dp"
        android:textColorHint="@color/secondtextColor"
        android:drawableEnd="@drawable/hideicon"
        android:paddingEnd="20dp"
        android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/btn_design"
        android:fontFamily="@font/noto_sans"
        android:gravity="center"
        android:text="@string/login_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_sign_layout"/>

    <LinearLayout
        android:id="@+id/linly1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup"
        android:orientation="horizontal"
        android:layout_weight="2">

    <Switch
        android:id="@+id/switch_dark_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:thumb="@drawable/switch_thumb"
        app:track="@drawable/switch_truck"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textSize="15dp"
            android:fontFamily="@font/noto_sans"
            android:layout_marginLeft="5dp"
            android:textColor="@color/secondtextColor"/>
    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="15dp"
            android:fontFamily="@font/noto_sans"
            android:textColor="@color/secondtextColor" />
    </LinearLayout>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:fontFamily="@font/noto_sans"
        android:textColor="@color/secondtextColor"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linly1" />

    <LinearLayout
        android:id="@+id/linly2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or">

        <ImageView
            android:id="@+id/google_btn"
            android:src="@drawable/google"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/facebook_btn"
            android:src="@drawable/facebook"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/apple_btn"
            android:src="@drawable/apple"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linly2"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondtextColor"
            android:text="@string/don_t_have_an_account"/>
        <TextView
            android:id="@+id/go_signup_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/sign_up_not_account_yet"
            android:textColor="@color/lightOrange"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>