<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    tools:context=".SignUpPageFragment">

    <ImageView
        android:id="@+id/discover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/discover"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/discover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:paddingLeft="20dp"
        android:drawableStart="@drawable/username"
        android:drawablePadding="20dp"
        android:background="@drawable/edttxt_design"
        android:hint="@string/username"
        android:textSize="14dp"
        android:textColorHint="@color/secondtextColor"
        android:inputType="textEmailAddress"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailaddress_sign_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintEnabled="false"
        app:helperText=""
        app:helperTextTextColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    <EditText
        android:id="@+id/emailaddress_sign"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:paddingLeft="20dp"
        android:drawableStart="@drawable/emailicon"
        android:drawablePadding="20dp"
        android:background="@drawable/edttxt_design"
        android:hint="@string/e_mail_address"
        android:textSize="14dp"
        android:textColorHint="@color/secondtextColor"
        android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_sign_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintEnabled="false"
        app:helperText=""
        app:helperTextTextColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/emailaddress_sign_layout"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <EditText
        android:id="@+id/password_sign"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:paddingLeft="20dp"
        android:drawableStart="@drawable/passwordicon"
        android:drawablePadding="20dp"
        android:background="@drawable/edttxt_design"
        android:hint="@string/password"
        android:textSize="14dp"
        android:textColorHint="@color/secondtextColor"
        android:drawableEnd="@drawable/hideicon"
        android:paddingEnd="20dp"
        android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintEnabled="false"
        app:helperText=""
        app:helperTextTextColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/password_sign_layout"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:paddingLeft="20dp"
        android:drawableStart="@drawable/passwordicon"
        android:drawablePadding="20dp"
        android:background="@drawable/edttxt_design"
        android:hint="@string/cofirm_password"
        android:textSize="14dp"
        android:textColorHint="@color/secondtextColor"
        android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/btn_design"
        android:fontFamily="@font/noto_sans"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_layout"/>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:fontFamily="@font/noto_sans"
        android:textColor="@color/secondtextColor"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup" />

    <LinearLayout
        android:id="@+id/linly2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or">

        <ImageView
            android:id="@+id/google_btn"
            android:src="@drawable/google"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/facebook_btn"
            android:src="@drawable/facebook"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/apple_btn"
            android:src="@drawable/apple"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linly2"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondtextColor"
            android:text="@string/account_ques"/>
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/login"
            android:textColor="@color/lightOrange"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>