<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg"
    tools:context=".LoginPageFragment">

    <TextView
        android:id="@+id/resset_password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resset_password"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/resset_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please enter your email address \nto request a password reset"
        android:textColor="@color/secondtextColor"
        android:textSize="17dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/resset_password1"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/emailaddressreset_sign"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/resset_password2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:paddingLeft="20dp"
        android:drawableStart="@drawable/emailicon"
        android:drawablePadding="20dp"
        android:background="@drawable/edttxt_design"
        android:hint="@string/e_mail_address"
        android:textSize="14dp"
        android:textColorHint="@color/secondtextColor"
        android:inputType="textEmailAddress"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/btn_design"
        android:fontFamily="@font/noto_sans"
        android:gravity="center"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailaddressreset_sign"/>





</androidx.constraintlayout.widget.ConstraintLayout>